                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.1


  *) [TS-1628] In validate_unmapped_url(), pristine_url can be invalid().

  *) [TS-1714] Fix some build problems for gcc v4.8.

  *) [TS-1626] remove WUTS proxy code
   Author: Uri Shachar <ushachar@hotmail.com>

  *) [TS-1741] add plugins examples to the build

  *) [TS-1058] add TSHttpTxnCloseAfterResponse experimental API
   Author: Yakov Kopel <ykopel@websense.com>

  *) [TS-1733] Retool tsxs so that it can compile multiple source files
   Author: Dale Ghent <daleg@omniti.com>

  *) [TS-1738] proxy.cluster.cache_total_hits_mem is missing in RecordsConfig
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1739] Fix TODO within varFloatFromName()
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1559] Server side termination not handled properly when a PluginVC
   Protocol Plugin is used. Author: Yossi Gottlieb.

  *) [TS-1300] Document the usage of TSUrlStringGet() and derivatives.
   Author: Uri Shachar.

  *) [TS-1645] increase the file stat resolution on config files
   Author: Yakov Kopel <ykopel@websense.com>

  *) [TS-1557] update ua_begin_write
   Author: Aidan McGurn <aidan.mcgurn@openwave.com>

  *) [TS-1320] Reading from SSL origin can starve sending data to client.

  *) [TS-1155] POST requests that are chunked encoding hang when going
  forward to origin over SSL

  *) [TS-1634] reimplement Lua state management to support reload

  *) [TS-1716] authproxy fails to reserve an argument index in global mode

  *) [TS-1710] esi plugin enhancement such as support forward proxy
   Author: Yu Qing <zhuangyuan@taobao.com>

  *) [TS-1707] fix FreeBSD store blocks calculation
   Thanks to Ben Aitchison <ben at meh dot net dot nz>

  *) [TS-1704] null pointer dereference in dns_result
   Author: Li-Wen Hsu <lwhsu@lwhsu.org>

  *) [TS-1701] segv if header_rewrite is configured with the InkAPI and uses